--- a/Caronte Responsive/js/index.html
+++ b/Caronte Responsive/js/index.html
@@ -75,7 +75,63 @@
                 <i class="fa-solid fa-rss"></i>
             </a>
         </nav>
-
     </header>
+    <main>
+        <div id="trabajo">
+            <h1>
+                Trabajos realizados
+            </h1>
+            <nav>
+                <a href="">Home</a> <i class="fa-solid fa-slash"></i>
+                <a href="">Trabajo</a> <i class="fa-solid fa-slash"></i>
+                <a href="">Diseño web</a>
+            </nav>
+        </div>
+        
+        <section>
+            <article>
+                <figure>
+                    <img src="/img/LogoIESCuraValera-969x1024.png">
+                </figure>
+                <span class="titular">Caronte</span>
+                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet culpa laborum, modi sint obcaecati ad? Maiores corrupti ipsam fugiat laboriosam libero quidem amet rerum dolorum! Enim suscipit eligendi vel doloribus.</h3>
+            </article>
+            <article>
+                <figure>
+                    <img src="/Proyecto Caronte/img/LogoIESCuraValera-969x1024.png">
+                </figure>
+                <span class="titular">Caronte</span>
+                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet culpa laborum, modi sint obcaecati ad? Maiores corrupti ipsam fugiat laboriosam libero quidem amet rerum dolorum! Enim suscipit eligendi vel doloribus.</h3>
+            </article>
+            <article>
+                <figure>
+                    <img src="/Proyecto Caronte/img/LogoIESCuraValera-969x1024.png">
+                </figure>
+                <span class="titular">Caronte</span>
+                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet culpa laborum, modi sint obcaecati ad? Maiores corrupti ipsam fugiat laboriosam libero quidem amet rerum dolorum! Enim suscipit eligendi vel doloribus.</h3>
+            </article>
+            <article>
+                <figure>
+                    <img src="/Proyecto Caronte/img/LogoIESCuraValera-969x1024.png">
+                </figure>
+                <span class="titular">Caronte</span>
+                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet culpa laborum, modi sint obcaecati ad? Maiores corrupti ipsam fugiat laboriosam libero quidem amet rerum dolorum! Enim suscipit eligendi vel doloribus.</h3>
+            </article>
+            <article>
+                <figure>
+                    <img src="/Proyecto Caronte/img/LogoIESCuraValera-969x1024.png">
+                </figure>
+                <span class="titular">Caronte</span>
+                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet culpa laborum, modi sint obcaecati ad? Maiores corrupti ipsam fugiat laboriosam libero quidem amet rerum dolorum! Enim suscipit eligendi vel doloribus.</h3>
+            </article>
+            <article>
+                <figure>
+                    <img src="/Proyecto Caronte/img/LogoIESCuraValera-969x1024.png">
+                </figure>
+                <span class="titular">Caronte</span>
+                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet culpa laborum, modi sint obcaecati ad? Maiores corrupti ipsam fugiat laboriosam libero quidem amet rerum dolorum! Enim suscipit eligendi vel doloribus.</h3>
+            </article>
+        </section>
+    </main>
 </body>
 </html>
