--- a/Caronte Responsive/js/index.html
+++ b/Caronte Responsive/js/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="/Caronte Responsive/css/estilos.css">
     <title>Caronte Sistemas ...</title>
 </head>
 <body>
@@ -43,7 +43,7 @@
             </a>
         </nav>
         <figure id="logo">
-            <img src="/img/caronte1.png">
+            <img src="/Caronte Responsive/img/caronte1.png">
         </figure>
         <h1>Caronte Sistemas</h1>
         <button>
@@ -76,7 +76,7 @@
             </a>
         </nav>
     </header>
-    <main>
+    <!-- <main>
         <div id="trabajo">
             <h1>
                 Trabajos realizados
@@ -91,47 +91,59 @@
         <section>
             <article>
                 <figure>
-                    <img src="/img/LogoIESCuraValera-969x1024.png">
+                    <img src="/Caronte Responsive/img/LogoIESCuraValera-969x1024.png">
                 </figure>
-                <span class="titular">Caronte</span>
-                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet culpa laborum, modi sint obcaecati ad? Maiores corrupti ipsam fugiat laboriosam libero quidem amet rerum dolorum! Enim suscipit eligendi vel doloribus.</h3>
+                <div>
+                    <h3>Caronte</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet culpa laborum, modi sint obcaecati ad? Maiores corrupti ipsam fugiat laboriosam libero quidem amet rerum dolorum! Enim suscipit eligendi vel doloribus.</p>
+                </div>
             </article>
             <article>
                 <figure>
                     <img src="/Proyecto Caronte/img/LogoIESCuraValera-969x1024.png">
                 </figure>
-                <span class="titular">Caronte</span>
-                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet culpa laborum, modi sint obcaecati ad? Maiores corrupti ipsam fugiat laboriosam libero quidem amet rerum dolorum! Enim suscipit eligendi vel doloribus.</h3>
+                <div>
+                    <h3>Caronte</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet culpa laborum, modi sint obcaecati ad? Maiores corrupti ipsam fugiat laboriosam libero quidem amet rerum dolorum! Enim suscipit eligendi vel doloribus.</p>
+                </div>
             </article>
             <article>
                 <figure>
                     <img src="/Proyecto Caronte/img/LogoIESCuraValera-969x1024.png">
                 </figure>
-                <span class="titular">Caronte</span>
-                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet culpa laborum, modi sint obcaecati ad? Maiores corrupti ipsam fugiat laboriosam libero quidem amet rerum dolorum! Enim suscipit eligendi vel doloribus.</h3>
+                <div>
+                    <h3>Caronte</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet culpa laborum, modi sint obcaecati ad? Maiores corrupti ipsam fugiat laboriosam libero quidem amet rerum dolorum! Enim suscipit eligendi vel doloribus.</p>
+                </div>
             </article>
             <article>
                 <figure>
                     <img src="/Proyecto Caronte/img/LogoIESCuraValera-969x1024.png">
                 </figure>
-                <span class="titular">Caronte</span>
-                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet culpa laborum, modi sint obcaecati ad? Maiores corrupti ipsam fugiat laboriosam libero quidem amet rerum dolorum! Enim suscipit eligendi vel doloribus.</h3>
+                <div>
+                    <h3>Caronte</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet culpa laborum, modi sint obcaecati ad? Maiores corrupti ipsam fugiat laboriosam libero quidem amet rerum dolorum! Enim suscipit eligendi vel doloribus.</p>
+                </div>
             </article>
             <article>
                 <figure>
                     <img src="/Proyecto Caronte/img/LogoIESCuraValera-969x1024.png">
                 </figure>
-                <span class="titular">Caronte</span>
-                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet culpa laborum, modi sint obcaecati ad? Maiores corrupti ipsam fugiat laboriosam libero quidem amet rerum dolorum! Enim suscipit eligendi vel doloribus.</h3>
+                <div>
+                    <h3>Caronte</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet culpa laborum, modi sint obcaecati ad? Maiores corrupti ipsam fugiat laboriosam libero quidem amet rerum dolorum! Enim suscipit eligendi vel doloribus.</p>
+                </div>
             </article>
             <article>
                 <figure>
                     <img src="/Proyecto Caronte/img/LogoIESCuraValera-969x1024.png">
                 </figure>
-                <span class="titular">Caronte</span>
-                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet culpa laborum, modi sint obcaecati ad? Maiores corrupti ipsam fugiat laboriosam libero quidem amet rerum dolorum! Enim suscipit eligendi vel doloribus.</h3>
+                <div>
+                    <h3>Caronte</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet culpa laborum, modi sint obcaecati ad? Maiores corrupti ipsam fugiat laboriosam libero quidem amet rerum dolorum! Enim suscipit eligendi vel doloribus.</p>
+                </div>
             </article>
         </section>
-    </main>
+    </main> -->
 </body>
 </html>
