header tablet finish

--- a/Caronte Responsive/js/index.html
+++ b/Caronte Responsive/js/index.html
@@ -39,40 +39,41 @@
             </a>
             <a href="#">
                 <span>Site Map</span>
-                <i class="fa-solid fa-phone"></i>
+                <i class="fa-solid fa-sitemap"></i>
             </a>
         </nav>
-        <figure id="logo">
-            <img src="/Caronte Responsive/img/caronte1.png">
-        </figure>
-        <h1>Caronte Sistemas</h1>
-        <button>
-            <i class="fa-solid fa-bars"></i>
-        </button>
+         <figure id="logo">
+                <img src="/Caronte Responsive/img/caronte1.png">
+         </figure>
+         <h1>Caronte Sistemas</h1>
+         <button>
+                <i class="fa-solid fa-bars"></i>
+         </button>
+        
         <nav id="ppal">
             <a href="#">
-                <span>Portfolio</span>
-                <i class="fa-solid fa-rss"></i>
-            </a>
-            <a href="#">
                 <span>Trabajo</span>
-                <i class="fa-solid fa-rss"></i>
+                <i class="fa-solid fa-briefcase"></i>
             </a>
             <a href="#">
                 <span>Servicio</span>
-                <i class="fa-solid fa-rss"></i>
+                <i class="fa-solid fa-server"></i>
             </a>
             <a href="#">
                 <span>Formacion</span>
-                <i class="fa-solid fa-rss"></i>
+                <i class="fa-solid fa-graduation-cap"></i>
             </a>
             <a href="#">
                 <span>Quienes Somos</span>
-                <i class="fa-solid fa-rss"></i>
+                <i class="fa-solid fa-people-group"></i>
             </a>
             <a href="#">
                 <span>Contacto</span>
-                <i class="fa-solid fa-rss"></i>
+                <i class="fa-regular fa-address-card"></i>
+            </a>
+            <a href="#">
+                <span>Portfolio</span>
+                <i class="fa-solid fa-braille"></i>
             </a>
         </nav>
     </header>
