--- a/Parques naturales/js/index.html
+++ b/Parques naturales/js/index.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link rel="stylesheet" href="/Parques naturales/css/estilos.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parques Naturales</title>
 </head>
 <body>
     <header>
-        <nav>
-            <h1>Parque Natural del Cabo de Gata</h1>
-            <button>
+        <h1>Parque Natural del Cabo de Gata</h1>
+        <button>
                 <i class="fa-solid fa-bars"></i>
-            </button>
-        </nav>
-        <nav>
+        </button>
+        <nav id="contacto">
             <a href="#">
                 <span>Inicio</span>
                 <i class="fa-solid fa-server"></i>
@@ -31,7 +30,7 @@
         </nav>
     </header>
     <body>
-        
+
     </body>
 </body>
 </html>
