--- a/ProyectoAIRBNB/js/index.html
+++ b/ProyectoAIRBNB/js/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/airbnb.css">
+    <link rel="stylesheet" href="/ProyectoAIRBNB/css/airbnb.css">
     <title>Portal Airbnb</title>
 </head>
 <body>
